--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="profile" content="https://github.com/rhrashal">
     <title>Scientific Calculator | Neumorphism UI | ROBIUL HOSSAIN </title>
     <link rel="stylesheet" href="calci.css">
+       <link rel="stylesheet" href="custom-responsive.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
